--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Change the new tab background to any background",
     "version": "0.1",
     "action": {
-        "default_icon": "images/icon.png"
+        "default_icon": "pages/images/icon.png"
     },
     "chrome_url_overrides": {
         "newtab": "pages/newtab.html"
